# controlled-document-retrieval-compliance-tracking-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: document_register.xlsx  generate_synthetic_data.py  qa_benchmark.jsonl
data/docs/: eumdr_nonconforming_capa_v1.md  eumdr_nonconforming_capa_v2.md  eumdr_pms_training_v1.md  eumdr_pms_training_v2.md  eumdr_sterilization_release_v1.md  eumdr_sterilization_release_v2.md  eumdr_translation_memo_obsolete_v1.md  eumdr_udi_verification_v1.md  eumdr_udi_verification_v2.md  iso_dmr_update_wi_v1.md  iso_dmr_update_wi_v2.md  iso_internal_audit_capa_v1.md  iso_internal_audit_capa_v2.md  iso_supplier_qualification_v1.md  iso_supplier_qualification_v2.md  usfda_batch_record_review_v1.md  usfda_batch_record_review_v2.md  usfda_complaint_triage_v1.md  usfda_complaint_triage_v2.md  usfda_data_integrity_training_v1.md  usfda_data_integrity_training_v2.md  usfda_electronic_records_policy_v1.md  usfda_electronic_records_policy_v2.md  usfda_lab_investigation_draft_v1.md
docs/: architecture.md  sample_evaluation.md
scripts/: ask.py  compliance_tracker.py  evaluate.py  ingest.py  serve.py
src/controlled_docs/: __init__.py  audit.py  benchmark.py  chunking.py  compliance.py  config.py  db.py  embeddings.py  ingestion.py  models.py  normalization.py  qa.py  retrieval.py  schemas.py  server.py  utils.py
tests/: conftest.py  test_api.py  test_compliance.py  test_ingestion.py  test_retrieval.py
